@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+JDO:   Resolved issue CASTOR-1873 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
+       Moved Performance Test Framework of Castor Persistence to its own module.
+       Details: http://jira.codehaus.org/browse/CASTOR-1873
+       (Ralf - 20070218)
+
 Gen:   Resolved issue CASTOR-1872 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem with completeness of tarballs in the download area.
        Details: http://jira.codehaus.org/browse/CASTOR-1872
